--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lixiang810-github-io",
   "version": "1.0.0",
   "description": "lixiang810's home page",
-  "packageManager": "pnpm@7.4.1",
+  "packageManager": "pnpm@7.5.0",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -11,9 +11,10 @@
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
     "@types/babel__core": "^7.1.19",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
+    "@types/color-string": "^1.5.2",
+    "@types/node": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.4",
+    "@typescript-eslint/parser": "^5.30.4",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -24,10 +25,13 @@
     "prettier": "^2.7.1",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0",
-    "vite": "^2.9.12",
-    "vite-plugin-solid": "^2.2.6"
+    "vite": "^2.9.13",
+    "vite-plugin-solid": "^2.2.6",
+    "vite-plugin-windicss": "^1.8.6",
+    "windicss": "^3.5.6"
   },
   "dependencies": {
-    "solid-js": "^1.4.5"
+    "solid-icons": "^0.5.0",
+    "solid-js": "^1.4.6"
   }
 }
