--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "upgpm": "ts-node ./scripts/upgradePackageManager.ts"
   },
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
     "@types/babel__core": "^7.1.19",
     "@types/color-string": "^1.5.2",
     "@types/node": "^18.7.1",
+    "@types/node-fetch": "^2.6.2",
+    "@types/semver": "^7.3.11",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
@@ -22,7 +25,10 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-solid": "^0.7.1",
+    "node-fetch": "^2.6.7",
     "prettier": "^2.7.1",
+    "semver": "^7.3.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0",
     "vite": "^3.0.5",
