--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lixiang810-github-io",
+  "name": "BeiyanYunyi-github-io",
   "version": "1.0.0",
-  "description": "lixiang810's home page",
-  "packageManager": "pnpm@7.9.5",
+  "description": "BeiyanYunyi's home page",
+  "packageManager": "pnpm@7.26.3",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -11,34 +11,34 @@
   },
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
-    "@types/babel__core": "^7.1.19",
+    "@types/babel__core": "^7.20.0",
     "@types/color-string": "^1.5.2",
-    "@types/node": "^18.7.1",
+    "@types/node": "^18.11.19",
     "@types/node-fetch": "^2.6.2",
-    "@types/semver": "^7.3.11",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "^8.21.0",
+    "@types/semver": "^7.3.13",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-solid": "^0.7.1",
+    "eslint-plugin-solid": "^0.9.4",
     "node-fetch": "^2.6.7",
-    "prettier": "^2.7.1",
-    "semver": "^7.3.7",
+    "prettier": "^2.8.3",
+    "semver": "^7.3.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
-    "typescript-plugin-css-modules": "^3.4.0",
-    "vite": "^3.0.5",
-    "vite-plugin-solid": "^2.3.0",
-    "vite-plugin-windicss": "^1.8.7",
+    "typescript": "^4.9.5",
+    "typescript-plugin-css-modules": "^4.1.1",
+    "vite": "^4.1.1",
+    "vite-plugin-solid": "^2.5.0",
+    "vite-plugin-windicss": "^1.8.10",
     "windicss": "^3.5.6"
   },
   "dependencies": {
-    "solid-icons": "^1.0.1",
-    "solid-js": "^1.4.8",
-    "solid-transition-group": "^0.0.10"
+    "solid-icons": "^1.0.4",
+    "solid-js": "^1.6.10",
+    "solid-transition-group": "^0.0.13"
   }
 }
